[package]
name = "gert"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "0.8"
url = "2"
directories = "6"
time = { version = "0.3", features = ["formatting", "parsing"] }
