[package]
name = "gert"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
directories = "6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
url = "2"
webbrowser = "0.8"
